# pterradactyl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: check-version.yaml  docker-build.yaml  python-build.yaml  python-test.yaml
examples/complex/: README.md  pterra.yaml
examples/complex/terraform/modules/deployment/: main.tf  metadata.tf  outputs.tf  variables.tf
examples/complex/terraform/modules/dynamodb/: main.tf  metadata.tf  outputs.tf  variables.tf
examples/complex/terraform/modules/iam_role/: main.tf  metadata.tf  outputs.tf  variables.tf
examples/complex/terraform/modules/kms/: main.tf  metadata.tf  outputs.tf  variables.tf
examples/complex/terraform/modules/known_roles/: outputs.tf  variables.tf
examples/complex/terraform/modules/least_privilege/: main.tf  outputs.tf  variables.tf
examples/complex/terraform/modules/resource_metadata/: convention.tf  main.tf  outputs.tf  variables.tf
examples/complex/terraform/modules/s3/: main.tf  metadata.tf  outputs.tf  variables.tf
examples/complex/terraform/modules/sqs/: main.tf  metadata.tf  variables.tf
examples/complex/terraform/modules/terraform/: main.tf  metadata.tf
examples/complex/vars/: common.yaml
examples/complex/vars/account/: common-test.yaml  projectb-prod.yaml  projectb-prod.yaml.enc  projectc-test.yaml.enc
examples/complex/vars/account_type/: production.yaml  test.yaml
examples/complex/vars/project/projecta/: common.yaml
examples/complex/vars/project/projecta/deployment/: ap-projecta0-useast1.yaml  ep-projecta0-useast1.yaml
examples/complex/vars/project/projectb/deployment/: bt-projectb0-uswest2.yaml  vp-projectb0-uswest2.yaml  vt-projectb0-uswest2.yaml
examples/complex/vars/project/projectc/deployment/: bt-projectc0-useast1.yaml  vt-projectc0-useast1.yaml
examples/simple/: README.md  pterra.yaml
examples/simple/terraform/modules/dynamodb/: main.tf  variables.tf
examples/simple/terraform/modules/s3/: main.tf  variables.tf
examples/simple/terraform/modules/sqs/: main.tf  outputs.tf  variables.tf
examples/simple/vars/: common.yaml
examples/simple/vars/account/: projecta-test.yaml  projectb-prod.yaml
examples/simple/vars/account_type/: production.yaml  test.yaml
examples/simple/vars/project/infra/deployment/: ct-infra0-uswest2.yaml
examples/simple/vars/project/projecta/: common.yaml
examples/simple/vars/project/projecta/deployment/: ap-projecta0-na-useast1.yaml  at-projecta0-na-uswest2.yaml  ep-projecta0-na-useast1.yaml  et-projecta0-na-uswest2.yaml
examples/simple/vars/project/projecta/serving_region/region/: us-east-1.yaml  us-west-2.yaml
examples/simple/vars/project/projectb/deployment/: bp-projectb0-na-uswest2.yaml  bt-projectb0-na-uswest2.yaml
examples/simple/vars/project/projectc/deployment/: bt-projectc0-na-useast1.yaml
pterradactyl/: __init__.py  __main__.py  cli.py  config.py
pterradactyl/commands/: base.py  dump.py  env.py  lookup.py  manifest.py  state.py
pterradactyl/facter/: __init__.py  arguments.py  base.py  environment.py  jinja.py  regex.py  shell.py
pterradactyl/facter/woops/: manifest_path.py
pterradactyl/terraform/: config.py  terraform.py  variable_extractor.py
pterradactyl/util/: __init__.py  download.py  filesystem.py  package.py
pterradactyl/validator/: __init__.py  base.py  version.py
tests/pterradactyl/: test_pterradactyl_config.py
tests/pterradactyl/commands/: test_base.py  test_env.py  test_lookup.py  test_manifest.py  test_state.py
tests/pterradactyl/facter/: test_arguments.py  test_base.py  test_environment.py  test_jinja.py  test_regex.py  test_shell.py
tests/pterradactyl/terraform/: __init__.py  test_backend_validation.py  test_config_integration.py  test_variable_extractor.py
tests/pterradactyl/util/: test_common.py  test_download.py  test_filesystem.py  test_package.py
tests/pterradactyl/util/test_resources/: facts.json
tests/pterradactyl/util/test_resources/compress/: sample.csv  test_log  test_log2
tests/pterradactyl/validator/: test_validator.py
tests/resources/config/: facts.yaml  facts_invalid.yaml  pterra.yaml  pterra_invalid.yaml
tests/resources/config/vars/: common.yaml
